clippin issue fix ios

--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,7 @@ input[type="text"]:focus {
     font-weight: bold;
     text-align: center;
     opacity: 1;
+    display:block;
 }
 
 
